--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,10 @@ body.menu-open {
       overscroll-behavior: none;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .wrapper {
   overflow: clip;
   display: -webkit-box;
@@ -2465,7 +2469,7 @@ body.menu-open {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  z-index: 1;
+  z-index: 6;
   -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
