--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,10 @@ body {
 		overscroll-behavior: none;
 	}
 }
+.no-scroll {
+    overflow: hidden;
+}
+
 .wrapper {
 	overflow: clip;
 	display: flex;
@@ -1271,7 +1275,7 @@ body {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		z-index: 1;
+		z-index: 6;
 		transition:
 			opacity 0.3s ease,
 			visibility 0.3s ease;
@@ -1629,10 +1633,12 @@ body {
 		opacity 0.3s ease,
 		visibility 0.3s ease;
 	z-index: 50;
+
 	&.active {
 		opacity: 1;
 		visibility: visible;
 	}
+
 	&__content {
 		background: #fff;
 		padding: toRem(40) toRem(20);
@@ -1645,6 +1651,7 @@ body {
 			padding: toRem(20) toRem(10);
 		}
 	}
+
 	&__close {
 		position: absolute;
 		top: toRem(10);
@@ -1653,26 +1660,32 @@ body {
 		cursor: pointer;
 		color: var(--dark--accent-color);
 	}
+
 	&__form {
 		display: flex;
 		flex-direction: column;
 		gap: toRem(20);
+
 		textarea {
 			resize: none;
 			min-height: toRem(100);
 		}
 	}
+
 	&__title {
 		@extend .item-details__title;
+
 		&:not(:last-child) {
 			margin-bottom: toRem(30);
 		}
 	}
+
 	&__input {
 		width: 100%;
 		padding: toRem(10);
 		border: toRem(1) solid #8b8b8b8e;
 		border-radius: toRem(5);
+
 		&:focus {
 			outline: none;
 			border-color: var(--light-accent-color);
