--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ body.menu-open {
   border: 0.5px solid #fff;
   width: 3.125rem;
   height: 3.125rem;
-  background-color: #135688;
+  background-color: var(--dark--accent-color);
   border-radius: 50%;
   -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
   transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -708,6 +708,22 @@ body.menu-open {
   line-height: 1.2em;
   text-transform: capitalize;
   font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.9375rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 @media (min-width: 73.125em) {
   .hero__title {
@@ -754,6 +770,85 @@ body.menu-open {
   width: 100%; /* Переконайтеся, що заповнює всю ширину */
 }
 
+.changing-word {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  font-size: inherit;
+  text-transform: none;
+}
+
+.letter {
+  display: inline-block;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  opacity: 0;
+  -webkit-animation: wave 0.6s forwards;
+          animation: wave 0.6s forwards;
+}
+
+@-webkit-keyframes wave {
+  0% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes wave {
+  0% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+.fade-out {
+  -webkit-animation: fadeOut 0.5s forwards;
+          animation: fadeOut 0.5s forwards;
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
+}
 .features {
   scroll-margin-top: 4.375rem;
 }
@@ -2448,137 +2543,6 @@ body.menu-open {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-}
-.video__button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background: rgba(160, 156, 144, 0.6);
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  z-index: 6;
-  -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-@media (min-width: 73.125em) {
-  .video__button {
-    width: 3.5rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (width: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem )) {
-    .video__button {
-      width: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem );
-    }
-  }
-  @supports not (width: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem )) {
-    .video__button {
-      width: calc(1.875rem + 1.625 * (100vw - 20rem) / 53.125);
-    }
-  }
-}
-@media (max-width: 20em) {
-  .video__button {
-    width: 1.875rem;
-  }
-}
-@media (min-width: 73.125em) {
-  .video__button {
-    height: 3.5rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (height: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem )) {
-    .video__button {
-      height: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem );
-    }
-  }
-  @supports not (height: clamp( 1.875rem , 1.2632352941rem  +  3.0588235294vw , 3.5rem )) {
-    .video__button {
-      height: calc(1.875rem + 1.625 * (100vw - 20rem) / 53.125);
-    }
-  }
-}
-@media (max-width: 20em) {
-  .video__button {
-    height: 1.875rem;
-  }
-}
-@media (max-width: 47.99875em) {
-  .video__button {
-    display: none;
-  }
-}
-@media (any-hover: hover) {
-  .video__button:hover svg {
-    -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-            transform: scale(1.1);
-  }
-}
-.video__button svg {
-  will-change: transform;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-@media (min-width: 73.125em) {
-  .video__button svg {
-    width: 1.125rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (width: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem )) {
-    .video__button svg {
-      width: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem );
-    }
-  }
-  @supports not (width: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem )) {
-    .video__button svg {
-      width: calc(0.5rem + 0.625 * (100vw - 20rem) / 53.125);
-    }
-  }
-}
-@media (max-width: 20em) {
-  .video__button svg {
-    width: 0.5rem;
-  }
-}
-@media (min-width: 73.125em) {
-  .video__button svg {
-    height: 1.125rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 73.125em) {
-  @supports (height: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem )) {
-    .video__button svg {
-      height: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem );
-    }
-  }
-  @supports not (height: clamp( 0.5rem , 0.2647058824rem  +  1.1764705882vw , 1.125rem )) {
-    .video__button svg {
-      height: calc(0.5rem + 0.625 * (100vw - 20rem) / 53.125);
-    }
-  }
-}
-@media (max-width: 20em) {
-  .video__button svg {
-    height: 0.5rem;
-  }
 }
 
 @media (min-width: 73.125em) {
