--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css?family=Inter:700&display=swap");
 :root {
   --light-accent-color: #1a659e;
-  --dark--accent-color: #095188;
+  --dark-accent-color: #095188;
 }
 
 @font-face {
@@ -169,7 +169,7 @@ body.menu-open {
   border: 0.5px solid #fff;
   width: 3.125rem;
   height: 3.125rem;
-  background-color: var(--dark--accent-color);
+  background-color: var(--dark-accent-color);
   border-radius: 50%;
   -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
   transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -397,7 +397,7 @@ body.menu-open {
 .menu__link {
   position: relative;
   font-size: 1rem;
-  color: var(--dark--accent-color);
+  color: var(--dark-accent-color);
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
   text-transform: uppercase;
@@ -415,7 +415,7 @@ body.menu-open {
     position: relative;
     width: 2.0625rem;
     height: 2.0625rem;
-    background-color: var(--dark--accent-color);
+    background-color: var(--dark-accent-color);
     border: none;
     padding: 0.5rem 0.34375rem;
     -webkit-appearance: none;
@@ -580,7 +580,7 @@ body.menu-open {
 }
 .button--dark {
   color: #fff;
-  background-color: var(--dark--accent-color);
+  background-color: var(--dark-accent-color);
 }
 @media (any-hover: hover) {
   .button--dark:hover {
@@ -603,8 +603,8 @@ body.menu-open {
   min-height: 90vh;
   position: relative;
   background-color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark--accent-color)));
-  background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark--accent-color) 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark-accent-color)));
+  background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
   overflow: hidden;
 }
 @media (min-width: 73.125em) {
@@ -968,7 +968,7 @@ body.menu-open {
 
 .title {
   font-family: "Inter";
-  color: var(--dark--accent-color);
+  color: var(--dark-accent-color);
   font-weight: 700;
 }
 @media (min-width: 73.125em) {
@@ -1200,7 +1200,7 @@ body.menu-open {
 }
 .item-features__title {
   font-family: "Inter";
-  color: var(--dark--accent-color);
+  color: var(--dark-accent-color);
   line-height: 1.2em;
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
@@ -1295,8 +1295,8 @@ body.menu-open {
   max-width: 73.125rem;
 }
 .partners__top-wrap {
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--light-accent-color)), to(var(--dark--accent-color)));
-  background-image: linear-gradient(90deg, var(--light-accent-color) 0%, var(--dark--accent-color) 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--light-accent-color)), to(var(--dark-accent-color)));
+  background-image: linear-gradient(90deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
   border-radius: 1.25rem 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2012,7 +2012,7 @@ body.menu-open {
   width: 0.625rem;
   height: 0.375rem;
   border-left: 0.125rem solid var(--dark--accent-color);
-  border-bottom: 0.125rem solid var(--dark--accent-color);
+  border-bottom: 0.125rem solid var(--dark-accent-color);
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
@@ -2806,7 +2806,7 @@ body.menu-open {
   width: 2.25rem;
   height: 0.75rem;
   border-radius: 0.4375rem;
-  background: var(--dark--accent-color);
+  background: var(--dark-accent-color);
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -3210,8 +3210,8 @@ body.menu-open {
 
 .footer {
   background-color: transparent;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark--accent-color)));
-  background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark--accent-color) 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--light-accent-color)), to(var(--dark-accent-color)));
+  background-image: linear-gradient(180deg, var(--light-accent-color) 0%, var(--dark-accent-color) 100%);
   border-radius: 3.125rem 0 0 0;
   padding-top: 9.375rem;
 }
@@ -3392,7 +3392,7 @@ body.menu-open {
 }
 @media (any-hover: hover) {
   .social__link:hover {
-    background-color: var(--dark--accent-color);
+    background-color: var(--dark-accent-color);
   }
 }
 .social__link::before {
