--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1713,7 +1713,7 @@ body {
 
 	&__body {
 		border-radius: toRem(20) 0 toRem(20) 0;
-		background-color: var(--dark--accent-color);
+		background-color: var(--dark-accent-color);
 		display: flex;
 		gap: toRem(20);
 		justify-content: space-between;
