--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1615,7 +1615,7 @@ body {
 }
 
 .faq__item.open .item-faq__header h3 {
-	color: var(--dark--accent-color);
+	color: var(--dark-accent-color);
 }
 //=======================POPUP=====================
 .popup {
