--- a/scss/style.scss
+++ b/scss/style.scss
@@ -923,7 +923,7 @@ body {
 			content: "";
 			width: toRem(10);
 			height: toRem(6);
-			border-left: toRem(2) solid var(--dark--accent-color);
+			border-left: toRem(2) solid var(--dark-accent-color);
 			border-bottom: toRem(2) solid var(--dark-accent-color);
 			transform: rotate(-45deg);
 			margin-top: toRem(5);
