--- a/css/style.css
+++ b/css/style.css
@@ -2011,7 +2011,7 @@ body.menu-open {
   content: "";
   width: 0.625rem;
   height: 0.375rem;
-  border-left: 0.125rem solid var(--dark--accent-color);
+  border-left: 0.125rem solid var(--dark-accent-color);
   border-bottom: 0.125rem solid var(--dark-accent-color);
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
